--- a/index.html
+++ b/index.html
@@ -21,64 +21,71 @@
 
     <header>
       <h1> Träningsligan </h1>
+      <p>--Gjord av Elina jonsson--</p>
     </header>
 
-    <nav>
+    <nav id="navbar">
 
-      <ul class="navul">
+      <div class="navigation" id="mynav">
 
-        <li class="linav">
 
-          <a href="#"> Startsida </a>
+        <ul class="navul">
 
-        </li>
+          <li class="linav">
 
-        <li class="linav">
+            <a href="index.html"> Startsida </a>
 
-          <a href="#"> Motivation </a>
+          </li>
 
-        </li>
+          <li class="linav">
 
-        <li class="linav">
+            <a href="motivation.html"> Motivation </a>
 
-          <a href="#"> Övningar </a>
+          </li>
 
-        </li>
+          <li class="linav">
 
-        <li class="linav">
+            <a href="#"> Övningar </a>
 
-          <a href="#"> Redskap </a>
+          </li>
 
-        </li>
+          <li class="linav">
 
-        <li class="linav">
-          <a href="#"> Kläder </a>
+            <a href="#"> Redskap </a>
 
-        </li>
+          </li>
 
-        <li class="linav">
+          <li class="linav">
+            <a href="#"> Kläder </a>
 
-          <a href="#"> Kost </a>
+          </li>
 
-        </li>
+          <li class="linav">
 
-        <li class="linav">
+            <a href="#"> Kost </a>
 
-          <a href="#"> Kontakt </a>
+          </li>
 
-        </li>
+          <li class="linav">
 
-        <li class="linav">
+            <a href="#"> Kontakt </a>
 
-          <a href="#"> Varukorg </a>
+          </li>
 
-        </li>
+          <li class="linav">
 
-      </ul>
+            <a href="#"> Varukorg </a>
+
+          </li>
+
+        </ul>
+
+      </div>
 
     </nav>
 
     <section>
+      <h1>Startsida</h1>
       <h2> Om träningsligan:</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
         aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -122,7 +129,38 @@
 
           <p> @loremipsum </p>
 
+          <h4> Facebook: </h4>
+
+          <p> @loremipsumdolor </p>
+
+          <h4> TIKTOK: </h4>
+
+          <p> @loremipsumträning </p>
+
         </li>
+
+        <li class="lifoot">
+
+          <h3> Innehåll på sidan</h3>
+
+          <a href="motivation.html"> Motivation</a>
+
+          <a href="#"> Övningar</a>
+
+          <a href="#"> Redskap</a>
+
+          <a href="#"> Kläder</a>
+
+          <a href="#"> Kost</a>
+
+        </li>
+
+        <li>
+
+          <h3>Registrera dig på sidan</h3>
+
+        </li>
+
       </ul>
 
     </footer>
