--- a/index.html
+++ b/index.html
@@ -143,27 +143,35 @@
 
           <h3> Innehåll på sidan</h3>
 
-          <a href="motivation.html"> Motivation</a>
 
-          <a href="#"> Övningar</a>
+          <a href="motivation.html"> Motivation</a> <br>
 
-          <a href="#"> Redskap</a>
 
-          <a href="#"> Kläder</a>
+          <a href="#"> Övningar</a> <br>
 
-          <a href="#"> Kost</a>
+
+
+          <a href="#"> Redskap</a> <br>
+
+
+          <a href="#"> Kläder</a> <br>
+
+
+
+          <a href="#"> Kost</a> <br>
+
 
         </li>
 
         <li>
 
-          <h3>Registrera dig på sidan</h3>
+          <h3>Registrera dig</h3>
 
         </li>
 
       </ul>
-
     </footer>
+
     <script type="text/javascript">
 
     </script>
