--- a/motivation.html
+++ b/motivation.html
@@ -23,13 +23,13 @@
       <h1> Träningsligan </h1>
     </header>
 
-    <nav>
+    <nav id="navbar">
 
       <ul class="navul">
 
         <li class="linav">
 
-          <a href="#"> Startsida </a>
+          <a href="index.html"> Startsida </a>
 
         </li>
 
@@ -77,6 +77,8 @@
       </ul>
 
     </nav>
+
+
 
     <section>
 
@@ -158,28 +160,33 @@
 
         <li class="lifoot">
 
-          <h4> Innehåll</h4>
+          <h3> Innehåll</h3>
 
-          <a href="#"> Motivation</a>
+          <a href="index.html"> Startsida</a> <br>
 
-          <a href="#"> Övningar</a>
+          <a href="#"> Motivation</a> <br>
 
-          <a href="#"> Redskap</a>
+          <a href="#"> Övningar</a> <br>
 
-          <a href="#"> Kläder</a>
+          <a href="#"> Redskap</a> <br>
 
-          <a href="#"> Kost</a>
+          <a href="#"> Kläder</a> <br>
 
+          <a href="#"> Kost</a> <br>
+
+        </li>
+
+        <li>
+
+          <h3>Registrera dig</h3>
         </li>
 
       </ul>
 
     </footer>
-    <script type="text/javascript">
 
-    </script>
   </div>
-
+  <script src="js/script.js"> </script>
 </body>
 
 </html>
