--- a/motivation.html
+++ b/motivation.html
@@ -42,7 +42,7 @@
 
         <li class="linav">
           <div class="dropdown">
-            <a href="#motivation"> Motivation </a>
+            <a href="motivation.html"> Motivation </a>
             <div class="dropdown-content">
               <a href="#hej"> Hur du börjar träna </a>
               <a href="#tja"> Hur håller upp motivationen</a>
