--- a/motivation.html
+++ b/motivation.html
@@ -132,8 +132,8 @@
 
 
     </aside>
-    <img src="img/ring.jpeg" alt="träningsring" class="ring">
-    <img src="img/eljo.jpeg" alt="kvinna på springband" class="eljo">
+    <img src="img/ring.jpeg" alt="bild på träningsring" class="ring">
+    <img src="img/eljo.jpeg" alt="bild på kvinna på springband" class="eljo">
     <footer>
 
       <ul class="ulfoot">
@@ -143,15 +143,12 @@
           <h4> Om oss </h4>
 
           <h5> Adress:</h5>
-
           <p>Lorem ipsum dolor </p>
 
           <h5>Kontakta för frågor:</h5>
-
           <p>lorem.ipsum@traning.com</p>
 
           <h5>Telefon:</h5>
-
           <p>0989097</p>
 
         </li>
@@ -161,15 +158,12 @@
           <h4> Sociala medier </h4>
 
           <h5> Instagram: </h5>
-
           <p> @loremipsum </p>
 
           <h5> Facebook: </h5>
-
           <p> @loremipsumdolor </p>
 
           <h5> TIKTOK: </h5>
-
           <p> @loremipsumträning </p>
 
         </li>
@@ -179,15 +173,10 @@
           <h4> Innehåll</h4>
 
           <a href="index.html"> Startsida</a> <br>
-
           <a href="#"> Motivation</a> <br>
-
           <a href="#"> Övningar</a> <br>
-
           <a href="#"> Redskap</a> <br>
-
           <a href="#"> Kläder</a> <br>
-
           <a href="#"> Kost</a> <br>
 
         </li>
