--- a/motivation.html
+++ b/motivation.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 
+<!-- Specifikation för vilket språk som används-->
 <html lang=sv>
 
 <head>
+  <!--länk till style stylesheet-->
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
+  <!--länk till grid stylesheet-->
   <link rel="stylesheet" type="text/css" href="css/grid.css">
-
+  <!--alla täcken fungerar-->
   <meta charset="utf-8" />
-
+  <!--möjliggör responsivitet-->
   <meta name="viewport" content=" width=device-width, initial-scale=1">
 
   <title>Träningsligan</title>
@@ -19,16 +21,18 @@
 
   <div class="container">
 
+    <!--rubrik-->
     <header>
       <h1> Träningsligan </h1>
     </header>
 
+    <!-- meny-->
     <nav id="navbar">
 
       <ul class="navul">
 
         <li class="linav">
-
+          <!-- dropdown meny-->
           <div class="dropdown">
             <a href="index.html"> Startsida </a>
             <div class="dropdown-content">
@@ -53,15 +57,13 @@
 
 
         </li>
-
+        <!--olika rubriker i menyn-->
         <li class="linav">
-
           <a href="#"> Övningar </a>
 
         </li>
 
         <li class="linav">
-
           <a href="#"> Redskap </a>
 
         </li>
@@ -72,19 +74,16 @@
         </li>
 
         <li class="linav">
-
           <a href="#"> Kost </a>
 
         </li>
 
         <li class="linav">
-
           <a href="#"> Kontakt </a>
 
         </li>
 
         <li class="linav">
-
           <a href="#"> Varukorg </a>
 
         </li>
@@ -94,11 +93,12 @@
     </nav>
 
 
-
+    <!--huvudinnehåll-->
     <section>
-
+      <!--storsta rubrik i section-->
       <h2 id="motivation">Motivation</h2>
 
+      <!--rubriker med paragrafer-->
       <h3 id="hej">Hur du börjar träna:</h3>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
@@ -128,20 +128,25 @@
 
     </section>
 
+    <!--sidoinnehåll-->
     <aside>
 
-
     </aside>
+    <!--två bilder-->
     <img src="img/ring.jpeg" alt="bild på träningsring" class="ring">
     <img src="img/eljo.jpeg" alt="bild på kvinna på springband" class="eljo">
+
+    <!--footer-->
     <footer>
 
+      <!--lista-->
       <ul class="ulfoot">
 
         <li class="lifoot">
 
+          <!--största rubrik i footer-->
           <h4> Om oss </h4>
-
+          <!--mindre rubriker med paragrafer-->
           <h5> Adress:</h5>
           <p>Lorem ipsum dolor </p>
 
@@ -154,9 +159,9 @@
         </li>
 
         <li class="lifoot">
-
+          <!--största rubrik i footer-->
           <h4> Sociala medier </h4>
-
+          <!--mindre rubriker med paragrafer-->
           <h5> Instagram: </h5>
           <p> @loremipsum </p>
 
@@ -169,9 +174,9 @@
         </li>
 
         <li class="lifoot">
-
+          <!--största rubrik i footer-->
           <h4> Innehåll</h4>
-
+          <!-- länkar till andra sidorna-->
           <a href="index.html"> Startsida</a> <br>
           <a href="#"> Motivation</a> <br>
           <a href="#"> Övningar</a> <br>
@@ -182,7 +187,7 @@
         </li>
 
         <li class="lifoot">
-
+          <!--största rubrik i footer-->
           <h4>Registrera dig</h4>
         </li>
 
@@ -191,6 +196,7 @@
     </footer>
 
   </div>
+  <!--länk till script sheet-->
   <script src="js/script.js"> </script>
 </body>
 
