--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-
+<!-- Specifikation för vilket språk som används-->
 <html lang=sv>
 
 <head>
+  <!--länk till style stylesheet-->
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
+  <!--länk till style stylesheet-->
   <link rel="stylesheet" type="text/css" href="css/grid.css">
-
+  <!--alla täcken fungerar-->
   <meta charset="utf-8" />
-
+  <!--möjliggör responsivitet-->
   <meta name="viewport" content=" width=device-width, initial-scale=1">
 
   <title>Träningsligan</title>
@@ -18,12 +19,12 @@
 <body>
 
   <div class="container">
-
+    <!--rubrik-->
     <header>
       <h1> Träningsligan </h1>
       <p>--Gjord av Elina jonsson--</p>
     </header>
-
+    <!-- meny-->
     <nav id="navbar">
 
       <div class="navigation" id="mynav">
@@ -31,7 +32,7 @@
         <ul class="navul">
 
           <li class="linav">
-
+            <!-- dropdown meny-->
             <div class="dropdown">
               <a href="index.html"> Startsida </a>
               <div class="dropdown-content">
@@ -55,7 +56,7 @@
             </div>
 
           </li>
-
+          <!--olika rubriker i menyn-->
           <li class="linav">
 
             <a href="#"> Övningar </a>
@@ -96,9 +97,11 @@
       </div>
 
     </nav>
-
+    <!--huvudinnehåll-->
     <section>
+      <!--storsta rubrik i section-->
       <h2>Startsida</h2>
+      <!--rubriker med paragrafer-->
       <h3 id="blue"> Om träningsligan:</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
         aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -107,20 +110,22 @@
         aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.t esse cillum dolore eu fugiat
         nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
-
+    <!--sido innehåll-->
     <aside>
 
     </aside>
+    <!--två bilder-->
     <img class="strumpor" src="img/strumpor.jpeg" alt="en bild på en träningsstång och fötter">
     <img class="kettel" src="img/kettel.jpeg" alt="en bild på kettelbells">
+    <!--footer-->
     <footer>
-
+      <!--lista-->
       <ul class="ulfoot">
 
         <li class="lifoot">
-
+          <!--största rubrik i footer-->
           <h4> Om oss </h4>
-
+          <!--mindre rubriker med paragrafer-->
           <h5> Adress:</h5>
           <p>Lorem ipsum dolor </p>
 
@@ -133,9 +138,9 @@
         </li>
 
         <li class="lifoot">
-
+          <!--största rubrik i footer-->
           <h4> Sociala medier </h4>
-
+          <!--mindre rubriker med paragrafer-->
           <h5> Instagram: </h5>
 
           <p> @loremipsum </p>
@@ -151,9 +156,9 @@
         </li>
 
         <li class="lifoot">
-
+          <!--största rubrik i footer-->
           <h4> Innehåll på sidan</h4>
-
+          <!-- länkar till andra sidorna-->
           <a href="motivation.html"> Motivation</a> <br>
           <a href="#"> Övningar</a> <br>
           <a href="#"> Redskap</a> <br>
@@ -163,14 +168,14 @@
         </li>
 
         <li class="lifoot">
-
+          <!--största rubrik i footer-->
           <h4>Registrera dig</h4>
 
         </li>
 
       </ul>
     </footer>
-
+    <!-- länkar till andra sidorna-->
     <script src="js/script.js"> </script>
   </div>
 
