--- a/motivation.html
+++ b/motivation.html
@@ -177,7 +177,7 @@
           <!--största rubrik i footer-->
           <h4> Innehåll</h4>
           <!-- länkar till andra sidorna-->
-          <a href="traning/index.html"> Startsida</a> <br>
+          <a href="index.html"> Startsida</a> <br>
           <a href="#"> Motivation</a> <br>
           <a href="#"> Övningar</a> <br>
           <a href="#"> Redskap</a> <br>
