--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <!--största rubrik i footer-->
           <h4> Innehåll på sidan</h4>
           <!-- länkar till andra sidorna-->
-          <a href="file:///Users/elina.jonsson/Documents/GitHub/traning/motivation.html"> Motivation</a> <br>
+          <a href="#motiation"> Motivation</a> <br>
           <a href="#"> Övningar</a> <br>
           <a href="#"> Redskap</a> <br>
           <a href="#"> Kläder</a> <br>
