--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li class="linav">
 
             <div class="dropdown">
-              <a href="#motivation"> Motivation </a>
+              <a href="motivation.html"> Motivation </a>
               <div class="dropdown-content">
                 <a href="motivation.html#hej"> Hur du börjar träna </a>
                 <a href="motivation.html#tja"> Hur håller upp motivationen</a>
